# JustVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
command/: Option.h  argument.h  behaviour.h  optionInfo.h  params.h  paramslist.h  required.h
src/: main.cpp
src/class_path/: class_path.cpp  class_path.h  dir_entry.cpp  dir_entry.h  entry.h  multi_entry.cpp  multi_entry.h
src/class_read/: CMakeLists.txt  class_file.cpp  class_file.h  class_read_test.cpp  class_reader.cpp  class_reader.h
src/class_read/access_flag/: CMakeLists.txt  af.cpp  af.h
src/class_read/constant_pool/: CMakeLists.txt  constant_info.cpp  constant_info.h  constant_pool.cpp  constant_pool.h  cp_info.cpp  cp_info.h  test_cp_info.cpp
src/command/: argument.h  behaviour.h  command.h  multi_value.h  option.h  option_info.h  params.h  params_list.h  paramslist.h  required.h
src/entry/: entry.h
src/jvm/: Jvm.cpp  Jvm.h
src/jvm_args/: CMakeLists.txt  JvmArgs.cpp  JvmArgs.h
src/logger/: log.h
src/misc/: CMakeLists.txt  array_literal.cpp
src/run_time/reflect/: dynamic_class.h  dynamic_enum.h  dynamic_union.h
src/runtime_data/: thread.cpp  thread.h
src/static/: util.h
src/utils/: CMakeLists.txt  pystring.cpp  pystring.h  util.cpp  util.h
src/utils/fl_array/: fl_array_ut.cpp  fl_array_ut.h  fl_array_ut.hpp
src/utils/mem_zip/: defs.h  tools.cpp  tools.h  unzipper.cpp  unzipper.h  zipper.cpp  zipper.h
src/utils/mini_zip/: crypt.h  ioapi.c  ioapi.h  ioapi_buf.c  ioapi_buf.h  ioapi_mem.c  ioapi_mem.h  miniunz.c  minizip.c  mztools.h  unzip.c  unzip.h  zip.c  zip.h
src/utils/pystring/: CMakeLists.txt  pystring.h
src/utils/zip/: adler32.c  crc32.c  crc32.h  deflate.c  deflate.h  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  trees.h  zconf.h  zlib.h  zutil.c
